maybe fix for bug on safari

--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,7 @@
     
 html {
     width: 100%;
+    position: relative;
     overflow-x: hidden;
 }
 body {
@@ -30,10 +31,6 @@ body {
     width: 100vw;
     overflow-x: hidden;
     scroll-behavior: smooth;
-}
-.big-boy {
-    overflow-x: hidden;
-    width: 100%;
 }
 
 #home > .home--background {
